--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -7,7 +7,7 @@
               [opened]="showSidenav || !navigation.mediumScreenAndDown">
     <app-sidenav [isHovering]="isHovering || showSidenav || navigation.mediumScreenAndDown"></app-sidenav>
   </md-sidenav>
-  <md-progress-bar class="progress-bar" *ngIf="progressBarService.showTopProgressBar$ | async" mode="query"></md-progress-bar>
+  <md-progress-bar class="progress-bar" *ngIf="http.requestInProgress$ | async" mode="query"></md-progress-bar>
 
   <main [class.container--hover]="!(navigation.showSidenav | async) && showOnHover">
     <div class="container">
