Add campaigns by product scheduleas and product schedules by product

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -119,7 +119,7 @@
     </md-tab>
 
     <md-tab>
-      <coming-soon [inPage]="true"></coming-soon>
+      <product-schedule-campaigns [id]="entity.id"></product-schedule-campaigns>
     </md-tab>
 
   </md-tab-group>
