--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -81,7 +81,7 @@
     </md-tab>
 
     <md-tab>
-      <coming-soon [inPage]="true"></coming-soon>
+      <product-product-schedules [id]="entity.id"></product-product-schedules>
     </md-tab>
 
     <md-tab>
