--- a/src/app/pages/users-page/users-index/users.component.html
+++ b/src/app/pages/users-page/users-index/users.component.html
@@ -1,19 +1,10 @@
-<div #indexR class="entity-index">
-  <user
-    *ngIf="showEntityDetails"
-    [mode]="mode"
-    [entityId]="mode === 'view' ? showEntityId : ''"
-    [fullScreen]="fullScreen"
-    (close)="hideEntityDetails()"
-    (deleteEntity)="deleteEntity($event)">
-  </user>
-
+<div class="entity-index">
   <div class="entity-index__title">
     Users
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/users', 'add']"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
