--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-campaigns/product-schedule-campaigns.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-campaigns/product-schedule-campaigns.component.html
@@ -38,7 +38,7 @@
   </table>
 
   <md-spinner class="entity-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
-  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No transactions found</div>
+  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No campaigns found</div>
 
   <table-pagination
     [limit]="limit"
