Add campaigns by product single page entity

--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -85,7 +85,7 @@
     </md-tab>
 
     <md-tab>
-      <coming-soon [inPage]="true"></coming-soon>
+      <product-campaigns [id]="entity.id"></product-campaigns>
     </md-tab>
   </md-tab-group>
 </div>
