--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -18,3 +18,18 @@
   width: 100%;
   z-index: 1;
 }
+
+.registration-form {
+  &__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.2);
+  }
+}
+
+registration-form {
+  margin: auto;
+}
