--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@
 @import "assets/scss/_tracker-view.scss";
 @import "assets/scss/_dialogs.scss";
 @import "assets/scss/_buttons.scss";
+@import "assets/scss/_registration.scss";
 
 /***************
   HTML Styles
