Enable jwt-redirect registration with new registration form

--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,284 +1,3 @@
-<div class="registration--out">
-  <div *ngIf="showScreen && screenVisible['welcome']" class="registration--in">
-    <div class="registration--in__welcome">
-      <h1> THANK YOU </h1>
-
-      <svg class="thank-you-icon" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52.97 52.88">
-        <title>favicon</title>
-        <path
-          d="M48.73,11.23A26.38,26.38,0,0,0,32.11,3.56l0,0L18.37,17.31A17.23,17.23,0,1,0,30,12.75c-0.38,0-.76,0-1.14,
-          0L33.65,8a22.23,22.23,0,1,1-19.48,6.31L24.37,4.08A26.48,26.48,0,1,0,48.73,11.23ZM30,17a13,13,0,1,1-9.23,
-          3.86h0l0.53-.53A12.94,12.94,0,0,1,30,17Z"
-          transform="translate(-3.52 -3.56)"/>
-      </svg>
-
-      <h2>
-        Welcome to SixCRM
-      </h2>
-      <p>
-        Please complete the following steps
-        <br>
-        to finalize your registration
-      </p>
-      <div>
-        <button md-raised-button (click)="show('form')">Continue</button>
-
-        <div class="registration--in__welcome__sign-out"><span (click)="authService.logout()">Sign Out</span></div>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="showScreen && screenVisible['form']" class="registration--in">
-
-    <div class="tab__image"></div>
-    <img class="tab__image--six" src="/assets/images/logo-white.svg">
-
-    <md-tab-group [(selectedIndex)]="selectedIndex">
-      <md-tab disabled label="Sign Up">
-        <div class="tab__content">
-          <table>
-           <td class="full">
-             <md-input [class.error]="isUsernameInvalid()" placeholder="Username" [(ngModel)]="username" name="username" required maxlength="32">
-               <md-hint class="error" *ngIf="isUsernameInvalid()">more than four characters please!</md-hint>
-             </md-input>
-           </td>
-          </table>
-          <table>
-            <td class="half">
-              <md-input [class.error]="isFirstNameInvalid()" placeholder="First Name" [(ngModel)]="firstName" name="firstName" required>
-                <md-hint class="error" *ngIf="isFirstNameInvalid()">more than two characters please!</md-hint>
-              </md-input>
-            </td>
-            <td class="half">
-              <md-input [class.error]="isLastNameInvalid()" placeholder="Last Name" [(ngModel)]="lastName" name="lastName" required>
-                <md-hint class="error" *ngIf="isLastNameInvalid()">more than two characters please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-          <table>
-            <td class="full">
-              <md-input [class.error]="isCompanyInvalid()" placeholder="Company" [(ngModel)]="company" name="company" required>
-                <md-hint class="error" *ngIf="isCompanyInvalid()">more than four characters please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-        </div>
-      </md-tab>
-      <md-tab disabled label="Address">
-        <div class="tab__content">
-          <table>
-            <td class="full">
-              <md-input [class.error]="isAddressOneInvalid()" placeholder="Address One"  [(ngModel)]="address1" name="address1" required>
-                <md-hint class="error" *ngIf="isAddressOneInvalid()">more than four characters please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-          <table>
-            <td class="full">
-              <md-input placeholder="Address Two"  [(ngModel)]="address2" name="address2"></md-input>
-            </td>
-          </table>
-
-          <div class="dropdown__container">
-            <div class="dropdown__element">
-              <span [class.input--active]="country" class="tab__content__dropdown">
-                {{ country || 'Country'}}
-              </span>
-              </div>
-              <div class="dropdown__element">
-              <span [md-menu-trigger-for]="stateMenu" [class.input--active]="state" class="tab__content__dropdown">
-                {{ state || 'State'}}
-                <md-icon>keyboard_arrow_down</md-icon>
-              </span>
-            </div>
-          </div>
-          <md-menu #countryMenu="mdMenu" x-position="before">
-            <button *ngFor="let c of countries" md-menu-item (click)="setCountry(c)"> {{c}} </button>
-          </md-menu>
-          <md-menu #stateMenu="mdMenu" x-position="before">
-            <button *ngFor="let s of states" md-menu-item (click)="setState(s)"> {{s}} </button>
-          </md-menu>
-
-          <table>
-            <td class="half">
-              <md-input [class.error]="isCityInvalid()" placeholder="City" [(ngModel)]="city" name="city" required>
-                <md-hint class="error" *ngIf="isCityInvalid()">more than two characters please!</md-hint>
-              </md-input>
-            </td>
-            <td class="half">
-              <md-input [class.error]="isPostalCodeInvalid()" placeholder="Postal Code" [(ngModel)]="postalCode" name="postalCode" (keydown)="isAllowedNumeric($event)" required maxlength="5">
-                <md-hint class="error" *ngIf="isPostalCodeInvalid()">five characters please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-        </div>
-      </md-tab>
-      <md-tab disabled label="Payment">
-        <div class="tab__content">
-          <table>
-            <td class="full">
-              <md-input [class.error]="ccNumberError" placeholder="Credit Card Number" [(ngModel)]="ccNumber" name="ccNumber" (keydown)="checkCCNumber($event)" required maxlength="16">
-                <md-hint class="error" *ngIf="ccNumberError">only numbers please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-          <span class="tab__content__label">Expiration Date</span>
-
-          <div class="dropdown__container">
-            <div class="dropdown__element">
-              <span [class.input--active]="ccExpMonth" [md-menu-trigger-for]="monthMenu" class="tab__content__dropdown">
-                {{ ccExpMonth || 'Month'}}
-                <md-icon>keyboard_arrow_down</md-icon>
-              </span>
-            </div>
-            <div class="dropdown__element">
-              <span [class.input--active]="ccExpYear" [md-menu-trigger-for]="yearMenu" class="tab__content__dropdown">
-                {{ ccExpYear || 'Year'}}
-                <md-icon>keyboard_arrow_down</md-icon>
-              </span>
-            </div>
-          </div>
-
-          <md-menu #monthMenu="mdMenu" x-position="before">
-            <button *ngFor="let m of getMonths()" md-menu-item (click)="setCCExpMonth(m)"> {{m}} </button>
-          </md-menu>
-          <md-menu #yearMenu="mdMenu" x-position="before">
-            <button *ngFor="let y of getYears()" md-menu-item (click)="setCCExpYear(y)"> {{y}} </button>
-          </md-menu>
-
-          <table>
-            <td class="full">
-              <md-input [class.error]="isCcvInvalid()" placeholder="CCV" [(ngModel)]="ccv" name="ccv" (keydown)="isAllowedNumeric($event)" required maxlength="4">
-                <md-hint class="error" *ngIf="isCcvInvalid()">more then three characters please!</md-hint>
-              </md-input>
-            </td>
-          </table>
-        </div>
-      </md-tab>
-      <md-tab disabled label="Confirmation">
-
-        <div class="tab__content">
-          <table>
-            <td class="full">
-              <md-input readonly="true" placeholder="Username" value="{{username}}"></md-input>
-            </td>
-          </table>
-          <table>
-            <td class="half">
-              <md-input readonly="true" placeholder="First Name" value="{{firstName}}"></md-input>
-            </td>
-            <td class="half">
-              <md-input readonly="true" placeholder="Last Name" value="{{lastName}}"></md-input>
-            </td>
-          </table>
-          <table>
-            <td class="full">
-              <md-input readonly="true" placeholder="Company" value="{{company}}"></md-input>
-            </td>
-          </table>
-
-          <table>
-            <td class="full">
-              <md-input readonly="true" placeholder="Address One" value="{{address1}}"></md-input>
-            </td>
-          </table>
-          <table>
-            <td class="full">
-              <md-input readonly="true" placeholder="Address Two" value="{{address2}}"></md-input>
-            </td>
-          </table>
-
-          <table>
-            <td class="half">
-              <md-input readonly="true" placeholder="Country" value="{{country}}"></md-input>
-            </td>
-            <td class="half">
-              <md-input readonly="true" placeholder="State" value="{{state}}"></md-input>
-            </td>
-          </table>
-
-          <table>
-            <td class="half">
-              <md-input readonly="true" placeholder="Credit Card Last Four" value="{{ccLastFour()}}"></md-input>
-            </td>
-            <td class="half">
-              <md-input readonly="true" placeholder="Postal Code" value="{{postalCode}}"></md-input>
-            </td>
-          </table>
-          <table>
-            <td class="half">
-              <md-input readonly="true" placeholder="CCV" value="{{ccv}}"></md-input>
-            </td>
-            <td class="half">
-              <md-input readonly="true" placeholder="CC EXP" value="{{monthsMap[ccExpMonth] + '/' + ccExpYear}}"></md-input>
-            </td>
-          </table>
-        </div>
-
-      </md-tab>
-    </md-tab-group>
-
-    <div class="tab__buttons">
-      <span (click)="previous()">Previous</span>
-      <button [disabled]="!isValid(selectedIndex)" md-raised-button (click)="next()">Next</button>
-    </div>
-  </div>
-
-  <div *ngIf="showScreen && screenVisible['terms']" class="registration--in">
-
-    <div class="tab__image"></div>
-    <img class="tab__image--six" src="/assets/images/logo-white.svg">
-
-    <div class="terms">
-      <div class="terms__title">
-        Terms and Conditions
-      </div>
-
-      <div class="terms__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </div>
-
-      <div class="terms__label">
-        Type full name to agree:
-      </div>
-      <md-input class="terms__input--single" placeholder="Full Name" [(ngModel)]="fullName" name="fullName">
-        <md-hint class="error" *ngIf="fullNameError">Full name must match {{firstName}} {{lastName}}</md-hint>
-      </md-input>
-      <div class="tab__buttons">
-        <span (click)="previous()">Previous</span>
-        <button [disabled]="!isValid(4) || regInProcess" md-raised-button (click)="complete()">Complete</button>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="showScreen && screenVisible['thankYou']" class="registration--in">
-    <div class="thank-you">
-
-      <h1 class="thank-you__title"> THANK YOU </h1>
-      <h2 class="thank-you__subtitle"> Registration Complete </h2>
-
-      <p class="thank-you__content">
-        Your account information has been receive and is awaiting confirmation from our account administrators.
-        <br>
-        <br>
-        Expect to receive an email confirmation once your application has been approved, this typically happens within one business day.
-      </p>
-
-      <div class="thank-you__actions">
-        <p class="thank-you__actions__label"> Haven't heard from us yet? </p>
-        <button md-raised-button [disabled]="approvalResent" (click)="resendApproval()">Resend Approval Request</button>
-        <div (click)="authService.logout()">Sign Out</div>
-      </div>
-    </div>
-  </div>
+<div class="registration">
+  <registration-form [embedded]="true" (completed)="registrationCompleted()"></registration-form>
 </div>
