--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -1,401 +1,6 @@
 .registration {
-  &--out {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url('/assets/images/mountainBg.png');
-    background-size: 100% 100%;
-  }
-
-  &--in {
-    position: relative;
-    margin: auto;
-    box-shadow: 0 0 40px 4px #111118;
-    top: 50%;
-    transform: translateY(-50%);
-    box-sizing: border-box;
-    padding: 20px 20px 60px 20px;
-    width: 450px;
-    height: 550px;
-    border-radius: 5px;
-    background-color: white;
-
-    &__welcome {
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
-      text-align: center;
-
-      div button {
-        width: 180px;
-        background-color: #0899CD;
-        color: white;
-      }
-
-      &__sign-out {
-        margin-top: 10px;
-        font-weight: 300;
-        font-size: 18px;
-        color: #9b9b9b;
-
-        span {
-          cursor: pointer;
-        }
-      }
-    }
-
-    @media only screen and (max-width : 500px) {
-      width: 100%;
-      height: 100%;
-      border-radius: 0;
-    }
-  }
-}
-
-md-tab-group {
-  height: 370px;
-  margin-top: 90px;
-
-  @media only screen and (max-width : 460px) {
-    margin-top: 70px;
-  }
-}
-
-.tab {
-  &__header {
-
-    &__content {
-      position: relative;
-      float: right;
-      margin: 30px 0 45px 0;
-      width: 60%;
-      border-bottom: solid 3px #0899CD;
-      padding-bottom: 5px;
-      font-weight: 400;
-      font-size: 20px;
-      color: #333333;
-
-      @media only screen and (max-width: 900px) {
-        width: 100%;
-      }
-
-      img {
-        display: none;
-
-        @media only screen and (max-width: 900px) {
-          position: absolute;
-          display: inline-block;
-          left: 2px;
-          bottom: 2px;
-          width: 35px;
-          height: 35px;
-        }
-      }
-
-      span {
-        padding-left: 20px;
-
-        @media only screen and (max-width: 900px) {
-          padding-left: 45px;
-          font-size: 24px;
-        }
-
-        @media only screen and (max-width: 600px) {
-          font-size: 20px;
-        }
-      }
-    }
-  }
-
-  &__content {
-    margin: 40px 40px 0 30px;
-
-    @media only screen and (max-width : 900px) {
-      margin: 20px 10px 0 10px;
-    }
-
-    &__label {
-      padding-left: 13px;
-      color: #9b9b9b;
-      font-size: 16px;
-    }
-
-    &__dropdown {
-      position: relative;
-      display: inline-block;
-      border-bottom: 1px #E4E4E4 solid;
-      padding-bottom: 4px;
-      width: 100%;
-      font-size: 14px;
-      color: #9b9b9b;
-      cursor: pointer;
-
-      md-icon {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        color: black;
-        cursor: pointer;
-      }
-    }
-
-    p {
-      padding-left: 40px;
-    }
-  }
-
-  &__image {
-    position: absolute;
-    top: -1px;
-    left: 0;
-    background: url("/assets/images/blueheader.svg") no-repeat;
-    background-size: 450px 95px;
-    width: 450px;
-    height: 95px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-
-    @media only screen and (max-width : 500px) {
-      width: 100%;
-      height: 100%;
-      background-size: 100%;
-      border-radius: 0;
-      z-index: -1;
-    }
-
-    &--six {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      width: 170px;
-
-      @media only screen and (max-width : 500px) {
-        width: 150px;
-      }
-
-      @media only screen and (max-width : 360px) {
-        top: 10px;
-        left: 10px;
-        width: 130px;
-      }
-    }
-  }
-
-  &__buttons {
-    z-index: 1000;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-
-    span {
-      margin-right: 15px;
-      font-weight: 300;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    button {
-      width: 130px;
-      font-weight: 500;
-      font-size: 18px;
-    }
-  }
-}
-
-.terms {
-  margin-top: 50px;
-  height: 420px;
-  padding: 0 15px;
-
-  @media only screen and (max-width : 460px) {
-    margin-top: 40px;
-    height: 100%;
-  }
-
-  &__title {
-    float: right;
-    margin: 30px 0 25px 0;
-    width: 100%;
-    border-bottom: solid 3px #0899CD;
-    padding-bottom: 5px;
-    font-size: 20px;
-    color: #333333;
-
-    span {
-      padding-left: 20px;
-    }
-  }
-
-  &__text {
-    border: solid 1px #858585;
-    padding: 20px 10px;
-    height: 50%;
-    overflow-y: auto;
-    color: #858585;
-  }
-
-  &__label {
-    font-size: 16px;
-    color: #9b9b9b;
-  }
-
-  &__input--single {
-    margin-left: 0;
-    width: 80%;
-  }
-}
-
-.dropdown {
-  &__container {
-    font-size: 0;
-    margin: 13px 0;
-  }
-
-  &__element {
-    display: inline-block;
-    box-sizing: border-box;
-    padding-left: 13px;
-    width: 50%;
-  }
-}
-
-.thank-you {
-  height: 100%;
-  padding: 0 15px;
-  text-align: center;
-
-  &__title {
-    margin-bottom: 0;
-    font-size: 36px;
-    font-weight: 900;
-    color: #333333;
-
-    @media only screen and (max-width : 600px) {
-      font-size: 30px;
-    }
-
-    @media only screen and (max-width : 320px) {
-      font-size: 26px;
-    }
-  }
-
-  &__subtitle {
-    margin-top: 0;
-    font-weight: 300;
-    font-size: 36px;
-
-    @media only screen and (max-width : 320px) {
-      font-size: 26px;
-    }
-  }
-
-  &__content {
-    font-size: 18px;
-    color: #9b9b9b;
-
-    @media only screen and (max-width : 320px) {
-      font-size: 16px;
-    }
-  }
-
-  &__actions {
-    z-index: 1000;
-    padding-top: 5px;
-
-    &__label {
-      font-size: 18px;
-      color: #9b9b9b;
-    }
-
-    button {
-      background-color: #0899CD;
-      color: white;
-      font-weight: 500;
-    }
-
-    div {
-      margin-top: 10px;
-      font-weight: 300;
-      font-size: 18px;
-      color: #9b9b9b;
-      cursor: pointer;
-    }
-  }
-}
-
-table {
-  td {
-    padding: 8px;
-
-    .full {
-      width: 100%;
-    }
-
-    .half {
-      width: 50%;
-    }
-  }
-}
-
-md-input {
-  width: 100%;
-  font-size: 14px;
-  color: #9b9b9b;
-}
-
-md-card-subtitle {
-  margin: 10px;
-}
-
-.thank-you-icon {
-  width: 124px;
-  height: 124px;
-  -webkit-animation: change-fill 1250ms 1 ease-in, six-icon 1050ms 1 ease-out;
-  animation: change-fill 1250ms 1 ease-in, six-icon 1050ms 1 ease-out;
-  fill:#01cc20;
-}
-
-@-webkit-keyframes change-fill {
-  25% {
-    fill:#0899cd;
-  }
-  100% {
-    fill:#01cc20;
-  }
-}
-
-@keyframes change-fill {
-  25% {
-    fill:#0899cd;
-  }
-  100% {
-    fill:#01cc20;
-  }
-}
-
-@-webkit-keyframes six-icon {
-  25% {
-    -webkit-transform:  rotate(-90deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg) ;
-
-  }
-}
-
-@keyframes six-icon {
-  10% {
-    transform:  rotate(-10deg) scale(1.05);
-    -webkit-transform:  rotate(-10deg) scale(1.05);
-  }
-  30% {
-    transform:  rotate(-30deg) scale(1.1);
-    -webkit-transform:  rotate(-30deg) scale(1.1);
-  }
-
-  100% {
-    transform: rotate(-360deg) scale(1) ;
-    -webkit-transform: rotate(-360deg) scale(1) ;
-
-  }
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  background: rgba(0,0,0,0.3);
 }
