--- a/src/app/authentication/registration-form/registration-form.component.html
+++ b/src/app/authentication/registration-form/registration-form.component.html
@@ -28,6 +28,10 @@
       <md-input-container [class.form-error]="formInvalid && !lastName">
         <input md-input required placeholder="Last Name" type="text" name="lastName" [(ngModel)]="lastName">
       </md-input-container>
+
+      <md-input-container [class.form-error]="formInvalid && !lastName">
+        <input md-input required placeholder="Email" type="text" name="email" [(ngModel)]="email">
+      </md-input-container>
     </form>
     <div class="registration-form__button" (click)="submitRegistrationData(regForm.form.valid)">Continue</div>
 
