--- a/src/app/authentication/invite-accept/invite-accept.component.scss
+++ b/src/app/authentication/invite-accept/invite-accept.component.scss
@@ -1,81 +1,33 @@
-.invite-accept {
+.accept-invite {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: url('/assets/images/mountainBg.png');
-  background-size: 100% 100%;
+  background: rgba(0,0,0,0.2);
+  height: 100vh;
+  width: 100vw;
 
-  &__in {
-    position: relative;
-    margin: auto;
-    box-shadow: 0 0 20px #111118;
-    top: 50%;
-    transform: translateY(-50%);
-    box-sizing: border-box;
-    padding: 20px 20px 60px 20px;
-    width: 350px;
-    height: 400px;
-    border-radius: 5px;
-    background-color: white;
+  &__form {
+    height: 455px;
+    display: flex;
+    flex-direction: column;
+  }
 
-    &__header {
-      position: absolute;
-      top: -1px;
-      left: 0;
-      background: url("/assets/images/blueheader.svg") no-repeat;
-      background-size: 350px 75px;
-      width: 350px;
-      height: 75px;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
+  &__button {
+    margin: 25px auto 0;
 
-      &__logo {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        width: 130px;
-      }
+    &--small-margin {
+      margin: 10px auto 0;
     }
 
-    &__content {
-      position: relative;
-      margin-top: 60px;
-      height: 320px;
-      text-align: center;
-
-      &__notification {
-
-        &__primary {
-          padding: 50px 30px 0;
-
-          &--bold {
-            margin-top: 20px;
-            font-size: 20px;
-          }
-        }
-
-        &__secondary {
-          padding-top: 30px;
-          font-size: 16px;
-          font-weight: 300;
-        }
-      }
-
-      &__info {
-        padding-top: 20px;
-
-        md-input {
-          margin: 10px 0;
-          width: 270px;
-          font-size: 16px;
-        }
-      }
-
-      &__button {
-        position: absolute;
-        bottom: 15px;
-        width: 100%;
-      }
+    &--standalone {
+      margin: 25px auto 35px;
     }
   }
+}
+
+.title {
+  padding: 10px 20px 0;
+  font-size: 16px;
+}
+.subtitle {
+  margin-top: 45px;
+  font-size: 14px;
 }
