--- a/src/assets/scss/_registration.scss
+++ b/src/assets/scss/_registration.scss
@@ -105,5 +105,17 @@
     background: #F57C00;
     font-size: 12px;
     cursor: pointer;
+
+    &--no-margin {
+      margin-bottom: 0;
+    }
+
+    &--cancel {
+      display: inline-block;
+      margin: 10px 0 25px;
+      width: 100%;
+      font-size: 10px;
+      cursor: pointer;
+    }
   }
 }
