Show message when graph has no data

--- a/src/app/charts/transaction-summary/transaction-summary.component.html
+++ b/src/app/charts/transaction-summary/transaction-summary.component.html
@@ -10,9 +10,10 @@
     </md-menu>
   </div>
 
-  <div [class.invisible]="!loaded">
+  <div [class.invisible]="!loaded || (!summaries || summaries.length === 0)">
     <chart style="display: block" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
   </div>
+  <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!summaries || summaries.length === 0)"> No Transactions Found</div>
   <md-spinner *ngIf="!loaded"></md-spinner>
 
   <div class="dashboard__table-chart__actions"><span [routerLink]="['/reports', 'transaction']">VIEW MORE</span></div>
