--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -502,6 +502,12 @@ $color-orange: #F16C00;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
 
+    &__no-data {
+      padding: 20px 10px;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.6);
+    }
+
     md-spinner {
       margin: 60px auto;
     }
